# cookiecutter-python

./: .gitignore  .markdownlint.yaml  CODE_OF_CONDUCT.md  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  cookiecutter.json
Python Cookiecutter/: .cruft.json  Makefile  README.md  pyproject.toml
Python Cookiecutter/.github/ISSUE_TEMPLATE/: general-purpose.md
Python Cookiecutter/.github/workflows/: code_quality.yaml  docs.yaml  vulnerability.yaml
Python Cookiecutter/docs/source/: index.rst
Python Cookiecutter/python_cookiecutter/: __init__.py  main.py
Python Cookiecutter/tests/test_integration/: test_init.py
Python Cookiecutter/tests/test_unit/: test_init.py
hooks/: post_gen_project.py  pre_gen_project.py
{{ cookiecutter.project_name }}/: .markdownlint.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml
{{ cookiecutter.project_name }}/.github/ISSUE_TEMPLATE/: general-purpose.md
{{ cookiecutter.project_name }}/.github/workflows/: code_quality.yaml  code_test.yaml  docs.yaml  pr_validation.yaml  release.yaml  release_pypi.yaml  update.yaml  vulnerability.yaml
{{ cookiecutter.project_name }}/docs/source/: index.rst
{{ cookiecutter.project_name }}/tests/test_integration/: test_dummy.py  test_init.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_name_underscored }}/: __init__.py
{{ cookiecutter.project_name }}/{{ cookiecutter.project_slug }}/: __init__.py  main.py
{{ cookiecutter.project_name_dashed }}/: .dockerignore  .editorconfig  .envrc.template  .markdownlint.yaml  .pre-commit-config.yaml  .readthedocs.yaml  .tool-versions  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml
{{ cookiecutter.project_name_dashed }}/.devcontainer/: Dockerfile  devcontainer.json  override.zshrc
{{ cookiecutter.project_name_dashed }}/{{ cookiecutter.project_name_underscored }}/: __init__.py  main.py
{{ cookiecutter.project_slug }}/: .yamllint.yaml  CODE_OF_CONDUCT.md  LICENSE  Makefile  PULL_REQUEST_TEMPLATE.md  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/.github/ISSUE_TEMPLATE/: general-purpose.md
{{ cookiecutter.project_slug }}/.github/workflows/: code_quality.yaml  code_test.yaml  pr_validation.yaml  update.yaml
{{ cookiecutter.project_slug }}/docs/source/: conf.py  index.rst
{{ cookiecutter.project_slug }}/tests/: __init__.py
{{ cookiecutter.project_slug }}/tests/test_integration/: __init__.py
{{ cookiecutter.project_slug }}/tests/test_unit/: __init__.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.project_slug }}/: main.py
(+24 files in other folders)
