[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
classifiers = [
  "Development Status :: 4 - {{ cookiecutter.development_status }}",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: {{ cookiecutter.python_version }}",
]
description = "{{ cookiecutter.short_description }}"
license = "Apache-2.0"
maintainers = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
name = "{{ cookiecutter.project_slug }}"
readme = "README.md"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"

{% if cookiecutter.add_script == 'y' %}
[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.main:main"
{% endif %}
