[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
classifiers = [
  "Development Status :: 4 - {{ cookiecutter.development_status }}",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: {{ cookiecutter.python_version }}",
]
description = "{{ cookiecutter.short_description }}"
license = "Apache-2.0"
maintainers = ["{{ cookiecutter.author_name }} <{{ cookiecutter.author_email }}>"]
name = "{{ cookiecutter.project_slug }}"
readme = "README.md"
repository = "https://github.com/{{ cookiecutter.github_username }}/{{ cookiecutter.project_slug }}"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_version }}"
{% if cookiecutter.add_script == 'y' %}
[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.project_slug }}.main:main"
{% endif %}
[tool.poetry.group.lint.dependencies]
ruff = ">=0.4.10,<1.0.0"
typos = ">=1.22.8,<2.0.0"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
line-ending = "lf"
quote-style = "double"

[tool.ruff.lint]
select = [
  "B", # flake8-bugbear
  "E", # pycodestyle
  "F", # Pyflakes
  "I", # isort
  "PL", # pylint
  "SIM", # flake8-simplify
  "UP", # pyupgrade
]

[tool.ruff.lint.pydocstyle]
convention = "google"
